<resources>
    <string name="app_name">SmartRedact</string>
    <string name="text_loading">Loading...</string>
    <string name="smart_redact">Smart Redact</string>
    <string name="professtional_redaction_right_on_your_phone">Professtional redaction right on your phone</string>
    <string name="skip">SKIP</string>
    <string name="next">NEXT</string>
    <string name="got_it">GOT IT</string>
    <string name="protect_your_origninal_content_without_uploading_videos_to_remote_server_for_processing">Protect your origninal content without\nuploading videos to remote server for processing</string>
    <string name="easy_to_use_redaction_and_fast">Easy-to-use redaction and fast</string>
    <string name="open_last_edit_session">Open last edit session</string>
    <string name="all_previous_sessions">All previous sessions</string>
    <string name="record_a_new_video">Record a new video</string>
    <string name="take_a_picture">Take a picture</string>
    <string name="load_media_from_local">Load media from local</string>
    <string name="text_ok">OK</string>
</resources>
