<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingTop="@dimen/dp_75"
        android:text="@string/smart_redact"
        android:textSize="@dimen/sp_24" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/open_last_edit_session"
            android:textAllCaps="false"
            android:paddingLeft="@dimen/dp_20"
            android:paddingRight="@dimen/dp_20"
            android:id="@+id/btnOpenLastEditSession"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/all_previous_sessions"
            android:textAllCaps="false"
            android:id="@+id/btnAllPreviousSessions"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/record_a_new_video"
            android:textAllCaps="false"
            android:id="@+id/btnRecordANewVideo"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/take_a_picture"
            android:textAllCaps="false"
            android:id="@+id/btnTakeAPicture"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/load_media_from_local"
            android:textAllCaps="false"
            android:id="@+id/btnLoadMediaFromLocal"/>

    </LinearLayout>
</LinearLayout>